
- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.

- Fix Issue #1703448: A joined thread could show up in the
  threading.enumerate() list after the join() for a brief period until
  it actually exited.


Library
-------

- #1189216: Fix the zipfile module to work on archives with headers
  past the 2**31 byte boundary.

- Issue #1336: fix a race condition in subprocess.Popen if the garbage
  collector kicked in at the wrong time that would cause the process
  to hang when the child wrote to stderr.

- Bug #1687: Fixed plistlib.py restricts <integer> to Python int when writing.

- Issue #1182: many arithmetic bugs in the decimal module have been
  fixed, and the decimal module has been updated to comply with the
  latest IBM Decimal Arithmetic specification (version 1.66) and
  testsuite (version 2.57).  (Backported from Python 2.6a0.)

- Patch #1637: fix urlparse for URLs like 'http://x.com?arg=/foo'.

- Issue #1735: TarFile.extractall() now correctly sets directory permissions
  and times.

- Bug #1713: posixpath.ismount() claims symlink to a mountpoint is a mountpoint.

- Issue #1700: Regular expression inline flags incorrectly handle certain
  unicode characters.

- Change ctypes version number to 1.0.3 (when Python 2.5.2 is released,
  ctypes 1.0.3 will be also be released).

- Issue #1695: Fixed typo in the docstrings for time.localtime() and gmtime().

- Issue #1642: Fix segfault in ctypes when trying to delete attributes.

- os.access now returns True on Windows for any existing directory.

- Issue #1531: tarfile.py: Read fileobj from the current offset, do not
  seek to the start.

- Issue 1429818: patch for trace and doctest modules so they play nicely
  together.

- doctest mis-used __loader__.get_data(), assuming universal newlines was used.

- Issue #1705170: contextlib.contextmanager was still swallowing